# science-of-programming

./: .gitignore  CMakeLists.txt  README.md
AbsPlugin/: AbsPlugin.vcxproj
CosPlugin/: CosPlugin.sln  CosPlugin.vcxproj
CtgPlugin/: CtgPlugin.sln
FactPlugin/: FactPlugin.vcxproj  dllmain.cpp
LnPlugin/: dllmain.cpp
SinPlugin/: SinPlugin.sln  SinPlugin.vcxproj  dllmain.cpp
SqrtPlugin/: SqrtPlugin.sln  dllmain.cpp
include/: Engine.hpp  Subject.hpp  Wrapper.hpp  WrapperImpl.hpp
include/engine/: Engine.hpp
include/subject/: Subject.hpp
include/wrapper/: Wrapper.hpp  WrapperImpl.hpp
lab1_Calculator/: lab1_Calculator.sln  lab1_Calculator.vcxproj  lab1_Calculator.vcxproj.filters
lab1_Calculator/include/: Calculator.h  CalculatorTypes.h  ExpressionParser.h  PluginLoader.h  evaluator.h  parser.h
lab1_Calculator/src/: Calculator.cpp  ExpressionParser.cpp  PluginLoader.cpp  evaluator.cpp  main.cpp  parser.cpp
lab2_wrapper/: CMakeLists.txt
lab2_wrapper/include/engine/: Engine.hpp
lab2_wrapper/include/subject/: Subject.hpp
lab2_wrapper/include/wrapper/: Wrapper.hpp  WrapperImpl.hpp
lab2_wrapper/src/: main.cpp
lab2_wrapper/src/engine/: Engine.cpp
lab2_wrapper/src/subject/: Subject.cpp
lab2_wrapper/tests/: test.hpp  testWrapper.cpp
plugin_projects/AbsPlugin/: AbsPlugin.sln  dllmain.cpp
plugin_projects/CosPlugin/: dllmain.cpp
plugin_projects/CtgPlugin/: CtgPlugin.vcxproj  dllmain.cpp
plugin_projects/FactPlugin/: FactPlugin.sln
plugin_projects/LnPlugin/: LnPlugin.sln  LnPlugin.vcxproj
plugin_projects/SinPlugin/: dllmain.cpp
plugin_projects/SqrtPlugin/: SqrtPlugin.vcxproj
plugin_projects/TgPlagin/: TgPlagin.sln  (+2 more)
src/: Engine.cpp  Subject.cpp  main.cpp
tests/: test.hpp  testWrapper.cpp
(+5 files in other folders)
